bk_ida/gccida/c0/force_data_section
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_data_section/src/varasm.c:738:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = no_section; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_data_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_data_section/src/obj/varasm.o] Error 1
